Update spring-boot in bff
- update spring-boot (3.2.4 -> 3.3.3)
- add micrometer-registry-prometheus dependency for metrics

Issue-ID: PORTALNG-116
Change-Id: Iebda696126bdd42bdd4c48d363fe61a781a20f13
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>